platform/management/monitoring/targets/argocd/monitoring.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-prometheus-ingress
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: argocd
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - argocd-application-controller
          - argocd-applicationset-controller
          - argocd-repo-server
          - argocd-server
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: monitoring}
          podSelector:
            matchLabels: {app.kubernetes.io/name: prometheus}
      ports:
        - {protocol: TCP, port: 8080}
        - {protocol: TCP, port: 8082}
        - {protocol: TCP, port: 8083}
        - {protocol: TCP, port: 8084}
